--- a/styles.css
+++ b/styles.css
@@ -345,7 +345,7 @@
       height: 525px;
       width: 400px;
       border-radius: 4px;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,0)0%, rgba(17,17,17,0.6)100%), url('images/pic3.jpg');
+      background-image: linear-gradient(to bottom, rgba(0,0,0,0)0%, rgba(17,17,17,0.6)100%), url('pic3.jpg');
       background-size: cover;
       color: white;
       position: relative;
@@ -353,7 +353,7 @@
       
   }
   .services__card:nth-child(2){
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0)0%, rgba(17,17,17,0.6)100%), url('images/pic2.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0)0%, rgba(17,17,17,0.6)100%), url('pic2.jpg');
    
     
 
